--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,8 +15,13 @@ body{
 }
 
 header{
-    background-color: aquamarine;
+    background-color: rgb(247, 247, 247);
+    padding: 0 1rem;
+    /*this will make the header section always at the tope*/
+    position:fixed;
+    z-index: 999;
 }
+
 
 /*main content should make use of most space avalable on the behalf of other elements*/
 main{
