--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,7 @@ body{
 }
 
 header{
-    background-color: rgb(247, 247, 247);
+    background-color:#ffffff;
     padding: 0 1rem;
     /*this will make the header section always at the tope*/
     position:fixed;
@@ -30,6 +30,16 @@ header>a>img{
 
 a{
     text-decoration: none;
+}
+/*Applying dropdown for mobile views*/
+nav{
+    position: absolute;
+    left: 0;
+    background-color: #ffffff;
+    width: 100%;
+    padding-left: 10px;
+    /*default display for mobile devices*/
+    display: none;
 }
 
 #menubar{
