--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,6 @@
+/*Importing Google Fonts*/
+@import url('https://fonts.googleapis.com/css2?family=Gayathri:wght@100;400;700&display=swap');
+
 /*Overriding the default browswer settings from very generic using Astric */
 *{
     margin: 0;
@@ -25,6 +28,7 @@ header{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    font-family: 'Gayathri', sans-serif;
 }
 header>a>img{
     width: 85px;
