Feat: create other html pages solar, wind, hydro. Remove Bio HTML page. Rename sign up to Join us page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,7 +85,7 @@ nav{
 main{
     background-color: blanchedalmond;
     /*flex shorthand : flex-grow flex-shrink flex-basis*/
-    flex:1 0 auto
+    flex:1 0 auto;
 
 }
 /*Styling footer*/
