--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -107,3 +107,31 @@ footer{
     margin: 10px 10px;
     color: rgb(97,192,77);
 }
+
+/*Media Queryies for larger screens iPad and onward*/
+@media screen and (min-width:768px) {
+    /*starting with navigation*/
+    nav{
+        display: block;
+        position: relative;
+        padding: 10px;
+    }
+
+    #menubar{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    #menubar li{
+        align-self: center;
+        padding: 1rem;
+        margin-bottom: 0;
+        font-size: 1.5rem;
+        font-weight: bolder;
+        letter-spacing: 3px;
+    }
+    .nav-menu-label{
+        display: none;
+    }
+
+}
