Feat: Add hover styling and media query for larger screen (laptop and PC)

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -135,3 +135,21 @@ footer{
     }
 
 }
+
+@media screen and (min-width: 992px) {
+    header{
+        box-shadow: none;
+    }
+    #menubar li{
+        padding: 0.5rem 1.5rem;
+    }
+    li a{
+        vertical-align: -webkit-baseline-middle;
+    }
+    li:hover{
+        background-color: rgb(255 163 68 );
+        border-top-right-radius: 10%;
+        border-bottom-left-radius: 10%;
+        border: 2px solid rgb(0 148 168) ; 
+    }
+}
