--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -144,12 +144,13 @@ footer{
         padding: 0.5rem 1.5rem;
     }
     li a{
-        vertical-align: -webkit-baseline-middle;
+        vertical-align: middle;
     }
     li:hover{
         background-color: rgb(255 163 68 );
         border-top-right-radius: 10%;
         border-bottom-left-radius: 10%;
-        border: 2px solid rgb(0 148 168) ; 
+        border: 1px solid rgb(0 148 168) ; 
     }
+   
 }
