--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -83,12 +83,22 @@ nav{
 
 /*main content should make use of most space avalable on the behalf of other elements*/
 main{
-    background-color: blanchedalmond;
+    background-color: #ffffff;
     /*flex shorthand : flex-grow flex-shrink flex-basis*/
     flex:1 0 auto;
     margin-top: 93px;
 
 }
+#clean-energy-hero-img{
+    width: 100%;
+    height: 600px;
+    
+    /*set background clolor incase img not loaded*/
+    background-color: lightblue;
+    /*short hand syntas path, style, horizonal and vertical / adapt automatically to content*/
+    background: url(../images/solarpanel-windmils-snow.jpg) no-repeat center center/cover;
+}
+
 /*Styling footer*/
 footer{
     /*Same background colr as header ~ it may havedifferent color in future styling*/
