--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@ link to the pallet : https://coolors.co/palette/00296b-003f88-00509d-fdc500-ffd5
 
 light Yello : #ffd500
 Darker Yello: #fdc500
-Semi-dark-blue :# 00509d
+Semi-dark-blue :#00509d
 darker blue: #003f88
 darkest blue : #00296b
 
@@ -115,7 +115,7 @@ main{
     width: 100%;
     height: 600px;
     
-    /*set background clolor incase img not loaded*/
+    /*set background clolor in case img not loaded*/
     background-color: lightblue;
     /*short hand syntas path, style, horizonal and vertical / adapt automatically to content*/
     background: url(../images/solarpanel-windmils-snow.jpg) no-repeat center center/cover;
@@ -135,9 +135,81 @@ main{
 #home-pg-cover-txt > h1, #home-pg-cover-txt > p{
     font-size: 140%;
     font-weight: 800;
-    padding: 10px;
+    padding: 25px;
     color:#00296b;
 }
+#home-pg-cover-txt > h1{
+    font-size: 2rem;
+}
+.center-vertically{
+    height: 1rem;
+    line-height: 1rem;
+}
+
+/* section 2 clean energy forms*/
+#clean-energy-sources{
+   width: 95%;
+   height:250px;
+   margin: 5px auto; 
+   display: flex;
+   flex-direction: column;
+   border: 1px solid red;
+}
+
+.title-center{
+    text-align: center;
+    padding-top: .7rem;
+}
+.make-title-bolder{
+    font-size: 2rem;
+    font-weight: 600
+}
+
+#energy-forms-container{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 5px;
+    flex-grow: 1;
+}
+.source-title{
+    font-size: 1.2rem;
+}
+.solar-en-circle,
+.wind-en-circle,
+.hydropower-en-circle{
+    width: 33.33%;
+    height: 70%;
+    text-align: center;
+    vertical-align: middle;
+    border:5px solid #fdc500;
+    padding:15px ;
+    padding-top: 25px;
+    border-radius: 50%;
+    font-size: 10px;   
+}
+.normal-txt{
+    font-size: 14px;
+}
+
+.wind-en-circle{
+    border:5px solid #00296b
+}
+
+.hydropower-en-circle{
+    border:5px solid aqua
+}
+.sources-read-more-btn{
+    text-decoration: none;
+    font-size:15px;
+    color: #fdc500;
+    display: none;
+}
+
+
+
 
 /*Styling footer*/
 footer{
@@ -184,6 +256,52 @@ footer{
         display: none;
     }
 
+    /*Energy forms section*/
+    #clean-energy-sources{
+        width: 95%;
+        height:500px;
+        margin: 5px auto; 
+     }
+
+    .make-title-bolder{
+        font-size: 3rem;
+    }
+
+    .solar-en-circle,
+    .wind-en-circle,
+    .hydropower-en-circle{
+        width: 33.33%;
+        height: 100%;
+        text-align: center;
+        vertical-align: middle;
+        padding:15px ;
+        padding-top: 25px;
+        border-radius: 50%;
+        position: relative;
+    }
+    .solar-en-circle{
+        background: url(../images/chelsea-wvusc5m.jpg) no-repeat center center/cover;
+    }
+    .wind-en-circle{
+        background: url(../images/camila-fernandez-leon.jpg) no-repeat center center/cover;
+    }
+    
+    .hydropower-en-circle{
+        background: url(../images/collab-media.jpg) no-repeat center center/cover;
+    }
+    .source-title{
+        font-size: 2rem;
+    }
+    .normal-txt,.sources-read-more-btn{
+        font-size: 2rem;
+    }
+    .sources-read-more-btn{
+        display: block;
+        position: absolute;
+        bottom: 25%;
+        left: 65px;
+    }
+
 }
 
 @media screen and (min-width: 992px) {
@@ -199,7 +317,12 @@ footer{
     li:hover{
         background-color: #fdc500;
     }
-   
+    #clean-energy-sources{
+        width: 95%;
+        height:500px;
+        margin: 5px auto; 
+     }
+
     #home-pg-cover-txt{
         background-color: rgb(255,255,255, .7);
         text-align: center;
@@ -208,5 +331,44 @@ footer{
         position: absolute;
         bottom: 25%;
         left: 20%;
+    }
+    .sources-read-more-btn{
+        display: block;
+    }
+
+    /* Clean Energy sources*/
+    .solar-en-circle,
+    .wind-en-circle,
+    .hydropower-en-circle{
+        max-width: 33.33%;
+        height: 100%;
+        text-align: center;
+        vertical-align: middle;
+        padding:35px ;
+        padding-top: 55px;
+        border-radius: 50%;
+        position: relative;
+    }
+    .solar-en-circle{
+        background: url(../images/chelsea-wvusc5m.jpg) no-repeat center center/cover;
+    }
+    .wind-en-circle{
+        background: url(../images/camila-fernandez-leon.jpg) no-repeat center center/cover;
+    }
+    
+    .hydropower-en-circle{
+        background: url(../images/collab-media.jpg) no-repeat center center/cover;
+    }
+    .source-title{
+        font-size: 3.5rem;
+    }
+    .normal-txt,.sources-read-more-btn{
+        font-size: 2rem;
+    }
+    .sources-read-more-btn{
+        display: block;
+        position: absolute;
+        bottom: 10%;
+        left: 35%;
     }
 }
