--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -165,7 +165,7 @@ main{
     font-weight: 600
 }
 
-#energy-forms-container{
+#energy-sources-container{
     width: 100%;
     display: flex;
     flex-direction: row;
@@ -208,6 +208,38 @@ main{
     display: none;
 }
 
+/*Reasong and application fields*/
+#reasons-appliction-fields{
+    border: 1px solid green;
+    margin: 5px auto;
+    width: 95%;
+    height: 500px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: flex-start;
+    gap: 10px;
+}
+
+#why-clean-energy,#application-fields{
+    width: inherit;
+    height: 95%;
+    margin: 5px auto;
+    border: 1px solid red;
+}
+.reasons-and-applications
+{
+    list-style:inside;
+    list-style-type: upper-roman;
+    font-size: 1.5rem;
+}
+#reasons-appliction-fields ul li, #application-fields ul li{
+    text-align: left;
+    padding: 5px;
+    padding-left:25px;
+    color: #00509d;
+    background-color: rgb(255,213,0, .4);
+}
 
 
 
@@ -302,6 +334,16 @@ footer{
         left: 65px;
     }
 
+    /*Reasong and application fields*/
+    #reasons-appliction-fields{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        justify-content: center;
+        height:300px;
+        gap: 10px;
+        flex-direction: flex-start;
+    }
 }
 
 @media screen and (min-width: 992px) {
