--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -109,7 +109,12 @@ main{
     margin-top: 93px;
 
 }
-#clean-energy-hero-img{
+#clean-energy-hero-img,
+#solar-energy-hero-img,
+#wind-energy-hero-img,
+#hydro-energy-hero-img,
+#join-us-hero-img
+{
     width: 100%;
     height: 600px;
     
@@ -119,6 +124,19 @@ main{
     background: url(../images/solarpanel-windmils-snow.jpg) no-repeat center center/cover;
     /*using positon as relative we can position all elements inside this element at defined cordinates*/
     position: relative;
+}
+#solar-energy-hero-img{
+    background: url(../images/darmau.jpg) no-repeat center center/cover;
+    
+}
+#wind-energy-hero-img{
+    background: url(../images/nicholas-doherty.jpg) no-repeat center center/cover;
+}
+#hydro-energy-hero-img{
+    background: url(../images/dan-meyers.jpg) no-repeat center center/cover;
+}
+#join-us-hero-img{
+    background: url(../images/bernard-hermant.jpg) no-repeat center center/cover;
 }
 
 #home-pg-cover-txt{
