--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -382,6 +382,79 @@ table td {
     background-color: rgb(255,213,0, .4)
   }
 
+  /*join us form on join us page*/
+  #joinus{
+    margin: 20px auto;
+    padding: 20px;
+    width: 95%;
+    display: flex;
+    justify-content: center;
+    flex-grow: 1;
+    background-image: url(../images/camila-fernandez-leon.jpg);
+    background-position: 20%;
+  }
+  #joinus-form{
+    padding: 10px;
+    border: 1px dashed #00296b;
+    border-radius: 5px;
+    background-color: rgb(255,213,0, .4);
+
+   
+  }
+  #joinus-form >h2{
+    text-align: center;
+  }
+  fieldset,
+  label,
+  input{
+    font-family: 'Gayathri', sans-serif;
+    color: #00296b;
+  }
+  fieldset{
+    padding: 10px;
+  }
+  legend{
+    color: #00296b;
+    margin: 2px;
+    padding: 2px;
+  }
+  .personal-data,
+  .radio-buttons{
+    margin: 10px 5px;
+  }
+  #joinus-form label{
+    display: block;
+    margin: 5px;
+    width: 100%;
+  }
+  input[type="text"]{
+    height: 25px;
+    width: 100%;
+    padding: 0 5px;
+    margin-top: 5px;
+    margin-bottom: 20px;
+    border-radius: 5px;
+  }
+  .radio-buttons fieldset div{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+ }
+
+.btn-container{
+    display: flex;
+    justify-content: center;
+}
+ .join-us{
+    padding: 15px 32px;
+    margin: 10px;
+    background-color: #fdc500;
+    color: #00296b;
+    font-size: 100%;
+    border-radius: 5px;
+    font-family: 'Gayathri', sans-serif;
+ }
 /*Styling footer*/
 footer{
     /*Same background colr as header ~ it may havedifferent color in future styling*/
@@ -539,6 +612,11 @@ footer{
         line-height: 1.6rem;
         font-size: 1.1rem;
     }
+
+    /*join us*/
+    #joinus{
+        justify-content: center;
+    }
   
 }
 
@@ -673,6 +751,19 @@ footer{
    table td{
         line-height: 1.6rem;
         font-size: 1.1rem;
+    }
+     /*join us*/
+    
+    #joinus{
+        background-repeat: no-repeat;
+        background-position: 35%;
+    }
+
+    #joinus-form{
+        position: relative;
+        left: 350px;
+        
+        
     }
   
 }
