--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -152,11 +152,13 @@ main{
 #home-pg-cover-txt > h1, #home-pg-cover-txt > p{
     font-size: 140%;
     font-weight: 800;
-    padding: 25px;
+    padding: 15px;
     color:#00296b;
 }
 #home-pg-cover-txt > h1{
-    font-size: 2rem;
+    font-size: 3rem;
+    line-height: 40px;
+    margin: 50px 0;
 }
 .center-vertically{
     height: 1rem;
@@ -177,7 +179,7 @@ main{
     text-align: center;
 }
 .make-title-bolder{
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     font-weight: 600
 }
 /*solar-how-it-works section in all sub-pages*/
@@ -185,14 +187,12 @@ main{
 #wind-how-it-works,
 #hydro-how-it-works{
     width: 95%;
-    height: 550px;
     margin: 5px auto;
     padding: 15px 25px;
     position: relative;
 }
 .top-bottom-margin{
-    margin-top: .3em;
-    margin-bottom: .3em;
+    margin: 0 .3em;
 }
 
 #energy-sources-container{
@@ -216,12 +216,12 @@ main{
     vertical-align: middle;
     border: 5px solid #fdc500;
     padding: 5px;
-    padding-top: 25px;
+    padding-top: 2rem;
     border-radius: 50%;
-    font-size: 10px;   
+    font-size: 8px;   
 }
 .normal-txt{
-    font-size: 14px;
+    font-size: 12px;
 }
 .descriptioin-txt{
     font-size: 1em;
@@ -271,9 +271,8 @@ main{
 /*Reasong and application fields*/
 #reasons-appliction-fields{
     margin: 5px auto;
-    margin-top: 95px;
+    margin-top: 25px;
     width: 95%;
-    height: 500px;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
@@ -322,16 +321,11 @@ main{
 #wind-system-components,
 #hydro-system-components{
     width: 95%;
-    height: 1880px;
     margin: 5px auto;
     padding: 5px 10px;
 }
-#wind-system-components{
-    height: 950px;
-}
-#hydro-system-components{
-    height: 1180px;
-}
+
+
 
 #solar-components-container{
     display: flex;
@@ -459,6 +453,7 @@ table td {
 footer{
     /*Same background colr as header ~ it may havedifferent color in future styling*/
     background-color: #ffffff;
+    box-shadow:   0 -5px 5px #ffd500;
 }
 #social-media-links{
     text-align: center;
@@ -474,6 +469,11 @@ footer{
     color: #00296b
 }
 
+@media screen and (min-width:350px){
+    .normal-txt{
+        font-size: 16px;
+    }
+}
 
 /*Media Queryies for larger screens iPad and onward*/
 @media screen and (min-width:768px) {
@@ -509,7 +509,8 @@ footer{
      }
 
     .make-title-bolder{
-        font-size: 3rem;
+        margin: 25px;
+        font-size: 2.5rem;
     }
 
     .solar-en-circle,
@@ -578,7 +579,7 @@ footer{
         flex-direction: row;
         justify-content: center;
     }
-
+    
     .solar-img,
     .windturbine-img,
     .hydropower-img{
@@ -591,7 +592,7 @@ footer{
         height: 355px;
     }
     /*System Components*/
-    #solar-system-components{
+    /*#solar-system-components{
         height: 1260px;
     }
     #wind-system-components{
@@ -599,7 +600,7 @@ footer{
     }
     #hydro-system-components{
         height: 790px;
-    }
+    }*/
     
     #solar-components-container{
         gap: 30px;
@@ -690,7 +691,7 @@ footer{
 
     /*Video about green energy*/
     #green-enery-video{
-        height: 600px;
+        height: 620px;
     }
 
     #green-enery-video div > iframe{
@@ -730,7 +731,7 @@ footer{
         height: 460px;
     }
     #hydro-system-components{
-        height: 480px;
+        height: 500px;
     }
 
     #solar-components-container{
