Fix:removing  hover effect on the list items other than footer icons and menubar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -632,10 +632,9 @@ footer{
         vertical-align: middle;
     }
     li a:hover{
-        vertical-align: middle;
-        border-bottom: 1px solid #00296b;
+        background-color: #fdc500;
     }
-    li:hover{
+    #menubar > li:hover{
         background-color: #fdc500;
         border: 1px solid #00296b;
     }
